--- a/style.css
+++ b/style.css
@@ -7,6 +7,5 @@ h1 {
     color: rgb(0, 255, 0);
 }
 a {
-    background-color: grey;
-    border-radius: 30px solid;
+    color: rgb(0, 255, 255);
 }
