--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@ a {
     color: rgb(0, 255, 255);
 }
 div {
-    border: 10px;
-    border-radius: 5px soloid;
+    border: 10px solid;
+    border-radius: 5px;
 }
