--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ a {
     color: rgb(0, 255, 255);
 }
 div {
-    border: 10px solid;
-    border-radius: 5px;
+    border: 5px solid;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 20px;
+}
+h2 {
+    color: rgb(255, 0, 0);
 }
