--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h2 {
     color: rgb(255, 0, 0);
 }
 button {
+    font-family: Courier New;
     color: rgb(0, 255, 0);
     background-color: rgb(0, 0, 0);
 }
